# fluka_data_visualizer

./: .gitignore  README.md  extensions.py  pyproject.toml  requirements.txt  run.py  start.sh
app/: __init__.py  api.py  env.env  routes.py
app/controllers/: digitalocean.py  globals.py  home_controller.py  users_restful_controller.py
app/views/: index.html
app/views/layouts/: base.html
frontend/src/: App.js
mvc_flask/: __init__.py
next-frontend/: next.config.mjs  package-lock.json  package.json
next-frontend/public/fluka_data/: BEAM_ENERGY__-0,01__BEAM_SIZE__-0,05__MATERIAL__ALUMINUM.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,05__MATERIAL__CARBON.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,05__MATERIAL__COPPER.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,05__MATERIAL__TUNGSTEN.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,1__MATERIAL__ALUMINUM.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,1__MATERIAL__CARBON.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,1__MATERIAL__COPPER.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,1__MATERIAL__TUNGSTEN.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,2__MATERIAL__ALUMINUM.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,2__MATERIAL__CARBON.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,2__MATERIAL__COPPER.csv  BEAM_ENERGY__-0,01__BEAM_SIZE__-0,2__MATERIAL__TUNGSTEN.csv  BEAM_ENERGY__-0,025__BEAM_SIZE__-0,05__MATERIAL__ALUMINUM.csv  BEAM_ENERGY__-0,025__BEAM_SIZE__-0,05__MATERIAL__CARBON.csv  BEAM_ENERGY__-0,025__BEAM_SIZE__-0,05__MATERIAL__COPPER.csv  BEAM_ENERGY__-0,025__BEAM_SIZE__-0,05__MATERIAL__TUNGSTEN.csv  (+12 more)
next-frontend/src/: csvParserWorker.ts  package.json
static/js/: helper.js
(+17 files in other folders)
